Fault injection impl doc wip

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -64,6 +64,18 @@
 	title        = {Click (08/12/2021)},
 }
 
+@misc{Locust,
+	author       = {{Locust}},
+	howpublished = {\url{https://locust.io/}},
+	title        = {Locust (08/12/2021)},
+}
+
+@misc{ChaosMeshChart,
+	author       = {{Chaos Mesh}},
+	howpublished = {\url{https://github.com/chaos-mesh/chaos-mesh/tree/master/helm/chaos-mesh}},
+	title        = {Chaos {M}esh {H}elm {C}hart (08/12/2021)},
+}
+
 
 
 
