--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -182,7 +182,7 @@ for Chaos Mesh experiments?
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsection{Chaos Mesh}
+\subsection{Chaos Mesh} \label{background-chaos-mesh}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
