--- a/docs/content/enhancements.tex
+++ b/docs/content/enhancements.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Enhancements}
+\chapter{Enhancements} \label{enhancements}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
