Finish fault injection impl doc

--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -189,5 +189,9 @@ for Chaos Mesh experiments?
 \subsubsection{Chaos Experiments}
 %----------------------------------------------------------------------------
 
+%----------------------------------------------------------------------------
+\subsubsection{Scheduling experiments}
+%----------------------------------------------------------------------------
+
 
 
